--- a/pages/public/login.html
+++ b/pages/public/login.html
@@ -28,6 +28,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+        <div style="position: fixed; bottom: 0; width: 100%; text-align: center;"> <p>Usuario: Diogo | Senha: 123</p>
+        
 </body>
 
 </html>
